# mensa-cli

./: .gitignore  README.md  mensa.py  pyproject.toml  requirements.txt
mensa_cli/: __init__.py  __main__.py  cli.py  presentation.py
mensa_cli/providers/: __init__.py  types.py
mensa_cli/providers/stw_berlin/: constants.py  parser.py
src/mensa/: cli.py  http.py  models.py  presentation.py
src/mensa/providers/: __init__.py  types.py
src/mensa/providers/stw_berlin/: parser.py
src/mensa_cli/: cli.py
src/mensa_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mensa_cli/providers/: __init__.py  types.py
