[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mensa"
version = "0.0.2"
description = "CLI to fetch and display mensa menus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "requests",
    "rich",
    "typer",
]

[project.scripts]
mensa = "mensa.cli:app"  # or mensa.cli:app

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

